--- a/en/revenue-agency/services/e-services/represent-a-client/aboutrac.html
+++ b/en/revenue-agency/services/e-services/represent-a-client/aboutrac.html
@@ -285,18 +285,25 @@ About Represent a Client</h1>
 
 
 </div>
+		 <p class="pull-left small"><strong>You may be looking for:</strong></p>
+<ul class="pull-left mrgn-lft-md list-unstyled small">
+<li><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/life-events/doing-taxes-someone-died/represent-deceased.html">Represent someone who died</a></li>
+
+</ul>
+
+<div class="clearfix">&nbsp;</div>
 <div class="mwsbodytext text parbase section">
     
 
     
-        <p>Represent a Client (RAC) gives authorized representatives secure, quick, and easy online access to tax-related information for the individuals, businesses and trusts they represent. Transactions in RAC are processed immediately, and information is up-to-the-minute.</p>
+        <p>Represent a Client (RAC) gives authorized representatives secure, quick, and easy online access to tax-related information for the individuals, businesses and trusts they represent. Transactions in Represent a Client are processed immediately, and information is up-to-the-minute.</p>
 	 <h3>On this page</h3>
     <ul>
 	          <li><a href="#section1">What's new and updated</a></li>
 
       <li><a href="#section2">Who can use Represent a Client</a></li>
       <li><a href="#section3">Sign-in options</a></li>
-	    	          <li><a href="#section4">RAC identifiers</a></li>
+	    	          <li><a href="#section4">RAC identifiers to gain authorization</a></li>
 
 	          <li><a href="#section5">Features available in Represent a Client</a></li>
 	          <li><a href="#section6">Account availability</a></li>
@@ -305,7 +312,7 @@ About Represent a Client</h1>
     </ul>
 	<h2 id="section1">What's new and updated</h2>
   <h3>Get quick access by validating your identity when you register</h3>
-<p><i>Interac&reg</i> document verification service (DVS) is an alternative identity validation option that allows Canadians to register for and access the CRA accounts in real-time. DVS provides the option for digital identity validation through document verification when registering for the CRA’s accounts. Canadians choosing this option will no longer need to wait up to 10 business days to receive a CRA security code by paper mail in order to register and access the CRA accounts. The process requires a mobile device to take a picture of the user’s government-issued photo identification and of themselves to verify their identity. To use this service you must:</p>
+<p><i>Interac&reg</i> document verification service (DVS) is an alternative identity validation option that allows Canadians to register for and access the CRA accounts in real-time. It provides the option for digital identity validation through document verification when registering for the CRA’s accounts. Canadians choosing this option will no longer need to wait up to 10 business days to receive a CRA security code by paper mail in order to register and access the CRA accounts. The process requires a mobile device to take a picture of the user’s government-issued photo identification and of themselves to verify their identity. To use this service you must:</p>
 <ul>
 <li>Be 16 years of age or older</li>
 <li>Have an accepted government-issued photo identification</li>
@@ -324,7 +331,7 @@ About Represent a Client</h1>
 <p>Users of the CRA accounts will receive an email notification:</p>
 <ul>
 <li>Letting them know they have successfully enrolled in Multi-factor authentication with either the telephone option, passcode grid option, or authenticator application option</li>
-<li>When they have been permanently or temporarily locked out of their account.</li>
+<li>When they have been permanently or temporarily locked out of their account</li>
 </ul>
 <h3>Authorization request signature page removed in Represent a Client</h3>
 <p>When a representative submits an authorization request to represent a business client in Represent a Client, the authorization signature page will no longer be generated as the authorization process will be finalized in My Business Account. If an authorization request was submitted in Represent a Client <strong>before <span class="nowrap">May 15, 2023</span></strong>, the generated signature page will still be required.</p>
@@ -335,10 +342,10 @@ About Represent a Client</h1>
 
 	
 	<h2 id="section2">Who can use Represent a Client</h2>
-  <p>A representative can be anyone who would like to access information and services on behalf of individuals and businesses. Examples include, but are not limited to:</p>
+  <p>A representative can be anyone who would like to access information and services on behalf of individuals, businesses, and trusts. Examples include, but are not limited to:</p>
  
   <ul>
-<li>An individual who is involved in the tax affairs of individuals and/or businesses, including:
+<li>An individual who is involved in the tax affairs of individuals, businesses, or trusts, including:
 <ul>
   <li>A friend or family member</li>
   <li>An executor, power of attorney or legal guardian</li>
@@ -422,11 +429,11 @@ About Represent a Client</h1>
   </li>
    
   </ol>-->
-		<h2 id="section4">RAC identifiers</h2>
+		<h2 id="section4">RAC identifiers to gain authorization</h2>
 <p>There are 3 different RAC identifiers you can use to gain authorization and access to someone else's information:</p>
 	<dl class="dl-horizontal">
 		<dt>RepID</dt>
-		<dd><p>Everyone who registers with RAC will receive a Rep ID.</p>
+		<dd><p>Everyone who registers with Represent a Client will receive a Rep ID.</p>
 		<p>Share this with your clients, family or friends to authorize you as their representative. You can also give your RepID to your employer to gain access to their clients' information.</p>
 		<details><summary>If you lose your RepID</summary>
 		<p>If you lose or forget your RepID, you do not need to register for another one. To view your RepID:</p>	
@@ -437,11 +444,11 @@ About Represent a Client</h1>
 		</details>
 		</dd>
 	<dt>Business number (BN)</dt>
-		<dd><p>Register your business with RAC to manage the access of employees to your client's information. Clients can authorize a business as an authorized representative, and only the employees associated to the business can access client information.</p>
-<p>For help with setting up your business to use RAC and associating employees to your business, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html">Set up your business in Represent a Client</a></p>	
+		<dd><p>Register your business with Represent a Client to manage the access of employees to your client's information. Clients can authorize a business as an authorized representative, and only the employees associated to the business can access client information.</p>
+<p>For help with setting up your business to use Represent a Client and associating employees to your business, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html">Set up your business to use Represent a Client</a></p>	
 		</dd>
 	<dt>GroupID</dt>
-	<dd><p>Any representative with a RAC account can create a group that will be identified by a unique GroupID. Any representative associated to the GroupID will have online access to the tax information of taxpayers that have authorized the GroupID.</p>
+	<dd><p>Any representative with a Represent a Client account can create a group that will be identified by a unique GroupID. Any representative associated to the GroupID will have online access to the tax information of taxpayers that have authorized the GroupID.</p>
 		<!--<details><summary>Reasons to use GroupID</summary>
 			<p>Creating a GroupID can help you by:</p>
 			<ul>
@@ -451,14 +458,14 @@ About Represent a Client</h1>
 			</ul>
 			<p>For more information, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/businesssetup.html">Set up a business or group in Represent a Client</a></p>
 		</details>-->
-					<p>For more information, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/groupidsetup.html">Set up a GroupID in Represent a Client</a></p>
+					<p>For more information, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/groupidsetup.html">Create and manage a GroupID in Represent a Client</a></p>
 
 	</dd>
 	</dl>
 	
 	<h2 id="section5">Features available in Represent a Client</h2>
-	<p>The features in RAC that are available to a representative are different for personal tax accounts, business tax accounts, trust tax accounts, and non-resident tax accounts.</p>
-	<p>You can access client accounts from the RAC main menu, by entering your client's SIN, business number or trust number in the appropriate field.</p>
+	<p>The features in Represent a Client that are available to a representative are different for personal tax accounts, business tax accounts, and trust tax accounts.</p>
+	<p>You can access client accounts from the main menu, by entering your client's SIN, business number or trust number in the appropriate field.</p>
 	
 <p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client/list-services-representatives-individuals.html">Individuals: Features for representatives</a></p>
 	
@@ -466,7 +473,6 @@ About Represent a Client</h1>
 	
 	<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-trust.html#section4">Trusts: Features for representatives</a></p>
 	
-	<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4058.html">Guide T4058, Non-Residents and Income Tax</a></p>
 
 	
 	<!--<h2 id="section4">Features available in Represent a Client</h2>
