--- a/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-trust.html
+++ b/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-trust.html
@@ -231,7 +231,7 @@
 <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
  <li><a href='https://www.canada.ca/en/revenue-agency.html'>Canada Revenue Agency</a></li>
             <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA accounts</a></li>
-<li><a href='https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html'>Represent a Client</a></li>
+<li><a href='https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html'>Represent a Client sign-in</a></li>
 </ol></div></nav>
 
 
@@ -269,6 +269,13 @@ About My Trust Account</h1>
 
 
 </div>
+		<p class="pull-left small"><strong>You may be looking for:</strong></p>
+<ul class="pull-left mrgn-lft-md list-unstyled small">
+<li><a href="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/tax/individuals/life-events/doing-taxes-someone-died/represent-deceased.html">Represent someone who died</a></li>
+
+</ul>
+
+<div class="clearfix">&nbsp;</div>
 <div class="mwsbodytext text parbase section">
     
 
@@ -282,7 +289,7 @@ About My Trust Account</h1>
      <!-- <li><a href="#section1">What's new and updated</a></li>-->
 	          <li><a href="#section2">Who can use My Trust Account</a></li>
 
-     <!-- <li><a href="#section3">Sign-in options</a></li>-->
+      <li><a href="#section3">Sign in through Represent a Client</a></li>
       <li><a href="#section4">Features in My Trust Account</a></li>
 	         <!-- <li><a href="#section5">Account availability</a></li>-->
 	          <li><a href="#section6">Resources</a></li>
@@ -295,19 +302,21 @@ About My Trust Account</h1>
 	<p>The primary trustees must be the first to register for online access. After that, they may add additional trustees and authorized representatives.</p>
 
 	<h3>Register for online access as a primary trustee</h3>
-<p>Before accessing My Trust Account, a primary trustee must register for or sign in to Represent a Client (RAC). First time users will be prompted to create a RepID. Primary trustees should ensure that the name associated to their RepID matches the name on their CRA trust account.</p>
-<p>Once the primary trustee has signed in to RAC and has a RepID, they must:</p>
+<p>Before accessing My Trust Account, a primary trustee must register for or sign in to Represent a Client. First time users will be prompted to create a RepID. The primary trustee should ensure that the name associated to their RepID matches the name on their CRA trust account.</p>
+<p>Once the primary trustee has signed in to Represent a Client and has a RepID, they must:</p>
 <ol class="">
 	<li>Select <strong>Authorization request</strong></li>
 	<li>Choose their <strong>RAC identifier</strong> (RepID, BN or GroupID) from the drop down menu and select <strong>Trust client</strong></li>
 	<li>Select <strong>Primary Trustee registration</strong></li>
 	<li>Provide information about the trust account as part of an enhanced validation process</li>
 </ol>
-	<p>After being confirmed as the primary trustee of the trust account, you will receive immediate access to My Trust Account and be able to add additional trustees, or authorized representatives to My Trust Account.</p>
+	<p>After being confirmed as the primary trustee of the trust account, they will receive immediate access to My Trust Account and be able to add additional trustees, or authorized representatives to My Trust Account.</p>
 	
-	<!--<h2 id="section3">Sign-in options</h2>-->
-	
-
+	<h2 id="section3">Sign in through Represent a Client</h2>
+	<p>My Trust Account is <strong>only</strong> accessible through Represent a Client.</p>
+	<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to Represent a Client</a></p>
+<p>From the Represent a Client welcome page, enter your Trust number and select <strong>Access T3</strong>.</p>
+	<p>Learn more about registering a trust account: <a href="https://www.canada.ca/en/revenue-agency/services/tax/trust-administrators/t3-return/application-trust-account-number-overview.html">Application for a Trust Account Number</a></p>
     
         <h2 id="section4">Features in My Trust Account</h2>
 	<p>Refer to the table below to understand the features available to each authorization level.</p>
@@ -437,7 +446,7 @@ About My Trust Account</h1>
         <td><ul class="list-unstyled text-left lst-spcd">
             <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Level 1: </strong>Allowed</li>
             <li class="lvl-2-toggle grouped"><strong>Level 2: </strong>Allowed</li>
-            <li class="lvl-lr-toggle grouped"> <strong>Level 3: </strong>Allowedr</li>
+            <li class="lvl-lr-toggle grouped"> <strong>Level 3: </strong>Allowed</li>
           </ul></td>
       </tr>
       <tr class="fltrTr">
