--- a/en/revenue-agency/services/e-services/cra-login-services.html
+++ b/en/revenue-agency/services/e-services/cra-login-services.html
@@ -150,7 +150,7 @@
 	  <div class="wb-eqht row">
                    <div class="col-lg-4 col-md-6">
 			   <h3><a href="/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a></h3>
-                       <p>Manage your personal tax and benefit information, change contact or banking details, make payments</p>
+                       <p>Manage your personal tax and benefit information, change contact or banking details<!--, make payments--></p>
                     </div>
 
 		  <div class="col-lg-4 col-md-6">
