--- a/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html
+++ b/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html
@@ -344,12 +344,14 @@
 <div class="well brdr-0 brdr-rds-0 mrgn-tp-lg">
   <section class="container">
     <h2 class="mrgn-tp-0">Help centre</h2>
-    <h3 class="h5">Common issues with signing in</h3>
+    <h3 class="h5 wb-inv">Common issues</h3>
     <div class="row">
       <div class="col-sm-6">
         <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html#ajax-forgotten-password-userID"></section>
       	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html#ajax-did-not-receive-passcode"></section>
 	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html#ajax-expired-security-code"></section>
+	      			      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html#ajax-update-information"></section>
+
 	       </div>
         <div class="col-sm-6">
 	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html#ajax-recover-locked-account"></section>
