--- a/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html
@@ -109,8 +109,8 @@
 <p>Create, change or recover your CRA user ID and password, and what to do if your user ID and password has been revoked.</p>
 	
 	<details>
-  <summary id="section3">Create a strong CRA user ID and password</summary>
-
+  <summary>Create a strong CRA user ID and password</summary>
+<h3 id="section3" class="mrgn-tp-sm">Create a strong CRA user ID and password</h3>
   <p>When you create your CRA user ID and password, we recommend that you:</p>
   <ul>
     <li>Make them easy for you to remember and hard for others to guess</li>
@@ -139,7 +139,8 @@
   </ul>
   <p>You cannot use more than 4 consecutive, identical characters. </p></details>
 	<details>
-	<summary id="section4">Change your CRA user ID or password</summary>
+	<summary>Change your CRA user ID or password</summary>
+		<h3 id="section4" class="mrgn-tp-sm">Change your CRA user ID or password</h3>
 	<p>You can change your user ID or password after signing in to your account.</p>
 		<div class="wb-tabs mrgn-tp-lg">
 	<div class="tabpanels">
@@ -183,7 +184,8 @@
 
 
 <details>
-<summary id="section5">Lost or forgotten CRA user ID or password</summary>
+<summary>Lost or forgotten CRA user ID or password</summary>
+	  <h3 id="section5" class="mrgn-tp-sm">Lost or forgotten CRA user ID or password</h3>
   <h4>Forgotten user ID</h4>
 	<p>You will need <strong>all</strong> of the following:</p>
   <ul class="fa-ul">
@@ -213,8 +215,8 @@
 
 
 	<details>
-    <summary id="section6">Revoked CRA user ID and password</summary>
-
+    <summary>Revoked CRA user ID and password</summary>
+<h3 id="section6" class="mrgn-tp-sm">Revoked CRA user ID and password</h3>
  <p>You may have received a notification that your user ID and password have been revoked. If that happens, you can regain access to your CRA account in the following ways:  </p>
     <dl class="dl-horizontal">
     <dt>Use a different sign in method</dt>
