--- a/en/revenue-agency/services/e-services/cra-login-services.html
+++ b/en/revenue-agency/services/e-services/cra-login-services.html
@@ -281,7 +281,7 @@
 		<details id="ajax-update-information">
             <summary>Update your information with the CRA</summary>
             <p class="mrgn-tp-md">Inform the CRA about changes to your direct deposit or contact information, such as address, phone number or name changes.</p>
-		   <p>If you prefer to receive another CRA security code by mail, you can <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/update-information.html">Update your information with the CRA</a></p>
+		   <p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/update-information.html">Update your information with the CRA</a></p>
           </details>
         </div>
         <div class="col-sm-6">
