--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-address.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-address.html
@@ -101,10 +101,13 @@
 	 <!--  <p>Keeping your information up-to-date will ensure that you keep getting your <a href="">GST/HST credit</a> (including those from certain related provincial payments), <a href="">Canada child benefit payments</a> (including those from certain related provincial or territorial programs), and <a href="">advanced Canada workers benefit payments</a> you may be entitled to, as well as important correspondence from the CRA. Otherwise, your payments may stop or you may not get important correspondence like your notice of assessment.</p> -->
 	   <p>Your up-to-date address will allow you to properly validate your identity when you call us, and will help to ensure you receive all your payments and correspondences.</p>
 <!-- <p>Because your personal information is confidential, the CRA does not usually give your new address to other government departments or Crown corporations, such as Canada Post. Similarly, other government departments do not provide such information to the CRA.</p> -->
-      <div class="wb-tabs mrgn-tp-lg">
+    <h2>Ways to update your address</h2>
+	  <p class="hidden-md hidden-lg">Choose an option to learn how to make changes to your account.</p> 
+	   
+	   <div class="wb-tabs mrgn-tp-lg">
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
-            <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
+           <summary class="py-4"><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
 			<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
 			 <p>Change your address online using My Account.</p>
 			<p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></p>
@@ -137,7 +140,7 @@
 
 		</details>
 		<details id="details-panel2" class="provisional wb-details-close">
-            <summary><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
+            <summary class="py-4"><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
 		
 <!-- <p>Call the CRA by phone or TTY if you have:</p>
       <ul>
@@ -225,7 +228,7 @@
 
 		</details>
 	<details id="details-panel3" class="provisional wb-details-close">
-        <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail</summary>
+        <summary class="py-4"><span class="fas fa-envelope mrgn-rght-sm"></span>By mail</summary>
 		<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
 	<!-- <p>Mail or fax your request to your <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/tax-centres.html">tax centre</a> using one of the following options:</p>-->
 		<p>Follow these steps to change your address by mail:</p>
@@ -284,7 +287,7 @@
 
 		</details>
 		<details id="details-panel4" class="provisional wb-details-close">
-        <summary><span class="far fa-file-alt mrgn-rght-sm"></span>On your tax return</summary>
+       <summary class="py-4"><span class="far fa-file-alt mrgn-rght-sm"></span>On your tax return</summary>
 			  <p class="pull-left mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong></p>
 <ul class="pull-left mrgn-lft-md mrgn-tp-md list-unstyled">
 <li>If you file <strong>electronically</strong>, at the same date and time your return is processed </li>
