Added header to tabs, mobile visible intro text and added padding

--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-marital-status.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-marital-status.html
@@ -109,10 +109,12 @@
 	 <!--  <p>Keeping your information up-to-date will ensure that you keep getting your <a href="">GST/HST credit</a> (including those from certain related provincial payments), <a href="">Canada child benefit payments</a> (including those from certain related provincial or territorial programs), and <a href="">advanced Canada workers benefit payments</a> you may be entitled to, as well as important correspondence from the CRA. Otherwise, your payments may stop or you may not get important correspondence like your notice of assessment.</p> -->
 	 <!--  <p>Keeping your information up-to-date will ensure you receive all your payments and correspondences.</p> -->
 <!-- <p>Because your personal information is confidential, the CRA does not usually give your new address to other government departments or Crown corporations, such as Canada Post. Similarly, other government departments do not provide such information to the CRA.</p> -->
-      <div class="wb-tabs mrgn-tp-lg">
+    <h2>Ways to update your marital status</h2>
+	  <p class="hidden-md hidden-lg">Choose an option to learn how to make changes to your account.</p> 
+	   <div class="wb-tabs mrgn-tp-lg">
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
-            <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
+            <summary class="py-4"><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
 			<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
 
 			 <p>Change your marital status online using My Account.</p>
@@ -136,7 +138,7 @@
 
 		</details>
 		<details id="details-panel2" class="provisional wb-details-close">
-            <summary><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
+           <summary class="py-4"><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
 			<p class="mrgn-bttm-lg mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
 
 
@@ -220,7 +222,7 @@
 
 		</details>
 		<details id="details-panel3" class="provisional wb-details-close">
-        <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail or fax</summary>
+        <summary class="py-4"><span class="fas fa-envelope mrgn-rght-sm"></span>By mail or fax</summary>
 					<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
 
 	 <p>Mail or fax your request to your <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/tax-centres.html">tax centre</a> using one of the following options:</p>
@@ -279,7 +281,7 @@
 		<li>Signature</li>
 	</ul></details> -->
 <!--	<details id="details-panel3" class="provisional wb-details-close">
-        <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail</summary>
+        <summary class="py-4"><span class="fas fa-envelope mrgn-rght-sm"></span>By mail</summary>
 			
 	 <p>To change your address by mail:</p>
 		<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
@@ -332,7 +334,7 @@
 
 		</details> 
 <details id="details-panel4" class="provisional wb-details-close">
-        <summary><span class="far fa-file-alt mrgn-rght-sm"></span>On your tax return</summary>
+       <summary class="py-4"><span class="far fa-file-alt mrgn-rght-sm"></span>On your tax return</summary>
   <p class="pull-left mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong></p>
 <ul class="pull-left mrgn-lft-md mrgn-tp-md list-unstyled">
 <li>If you file <strong>electronically</strong>, at the same date and time your return is processed</li>
