Updated header to tabs, mobile visible intro text and added padding

--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-name.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-name.html
@@ -97,11 +97,12 @@
 	    <li><a href="#section4">Update other information</a></li>
 
     </ul>
-<h2 id="section1">Change either your first name or last name</h2>
+<h2 id="section1">Ways to change either your first name or last name</h2>
+	     <p class="hidden-md hidden-lg">Choose an option to learn how to make changes to your account.</p> 
 	 <div class="wb-tabs mrgn-tp-lg">
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
-            <summary><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
+            <summary class="py-4"><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
 			<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong>Processing time:</strong> Immediate</p>
 
 <p>You can change your name by phone if you haven't already changed one of your names. For example, if you previously changed your first name, you cannot change your last name by phone.</p>
@@ -188,7 +189,7 @@
 			
 		</details>
 		<details id="details-panel2" class="provisional wb-details-close">
-            <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail or fax</summary>
+            <summary class="py-4"><span class="fas fa-envelope mrgn-rght-sm"></span>By mail or fax</summary>
 					<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
 
 		 <p>You must provide documentation if you have already changed your name.</p> 
