--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/language.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/language.html
@@ -85,10 +85,13 @@
 	 <!--  <p>Keeping your information up-to-date will ensure that you keep getting your <a href="">GST/HST credit</a> (including those from certain related provincial payments), <a href="">Canada child benefit payments</a> (including those from certain related provincial or territorial programs), and <a href="">advanced Canada workers benefit payments</a> you may be entitled to, as well as important correspondence from the CRA. Otherwise, your payments may stop or you may not get important correspondence like your notice of assessment.</p> -->
 	 <!--  <p>Keeping your information up-to-date will ensure you receive all your payments and correspondences.</p> -->
 <!-- <p>Because your personal information is confidential, the CRA does not usually give your new address to other government departments or Crown corporations, such as Canada Post. Similarly, other government departments do not provide such information to the CRA.</p> -->
-      <div class="wb-tabs mrgn-tp-lg">
+      <h2>Ways to update your language of correspondence</h2>
+	  <p class="hidden-md hidden-lg">Choose an option to learn how to make changes to your account.</p> 
+	   
+	   <div class="wb-tabs mrgn-tp-lg">
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
-            <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
+            <summary class="py-4"><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
 			<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>
 <p>Change your language of correspondence online using My Account.</p>
 			<p class="mrgn-lft-lg"><a class="btn btn-call-to-action" href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">CRA My Account</a></p>
@@ -120,7 +123,7 @@
 		 <p>To change the language of correspondence online for someone else, including a spouse or family member, you must be an authorized representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
 </details>
 		<details id="details-panel2" class="provisional wb-details-close">
-            <summary><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
+            <summary class="py-4"><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
 <p class="mrgn-bttm-lg mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> Immediate</p>	
 		
 
@@ -204,7 +207,7 @@
 
 		</details>
 		<details id="details-panel3" class="provisional wb-details-close">
-        <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail or fax</summary>
+        <summary class="py-4"><span class="fas fa-envelope mrgn-rght-sm"></span>By mail or fax</summary>
 					<p class="mrgn-tp-md"><span class="far fa-clock"></span><strong> Processing time:</strong> 4 to 6 weeks after we receive your documents <!-- For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a>.--></p>	
 
 	 <p>Mail or fax a letter to your <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/tax-centres.html">tax centre</a> with the following information:</p>
@@ -275,7 +278,7 @@
 
 		</details> -->
 	<!--	<details id="details-panel4" class="provisional wb-details-close">
-        <summary><span class="far fa-file-alt mrgn-rght-sm"></span>On your tax return</summary>
+        <summary class="py-4"><span class="far fa-file-alt mrgn-rght-sm"></span>On your tax return</summary>
   <p class="pull-left"><span class="far fa-clock"></span><strong> Processing time:</strong></p>
 <ul class="pull-left mrgn-lft-md list-unstyled">
 <li>Approximately 8 weeks after receiving your paper return</li>
