Added header, mobile only text and padding

--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-individuals.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-individuals.html
@@ -111,10 +111,12 @@
 
 	   
 	 <!--  <p><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>-->
-      <div class="wb-tabs mrgn-tp-lg">
+      <h2>Ways to update your direct deposit information</h2>
+	   <p class="hidden-md hidden-lg">Choose an option to learn how to make changes to your account.</p>
+	   <div class="wb-tabs mrgn-tp-lg">
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
-            <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
+            <summary class="py-4"><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
 <!--<p><span class="far fa-clock"></span> <strong>Processing time:</strong> Immediate</p>-->
 				   <p class="mrgn-tp-md"><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
 
@@ -138,7 +140,7 @@
 		</details>
 		
 		<details id="details-panel2" class="provisional wb-details-close">
-        <summary><span class="fas fa-university mrgn-rght-sm"></span>Through your Canadian bank or credit union</summary>
+        <summary class="py-4"><span class="fas fa-university mrgn-rght-sm"></span>Through your Canadian bank or credit union</summary>
 <!--<p><span class="far fa-clock"></span> <strong>Processing time:</strong> The following business day</p>-->
 	   <p class="mrgn-tp-md"><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
 
@@ -353,7 +355,7 @@
                 </details>
 		</details>
 			<details id="details-panel3" class="provisional wb-details-close">
-            <summary><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
+            <summary class="py-4"><span class="fas fa-phone-alt mrgn-rght-sm"></span>By phone</summary>
 			   <p class="mrgn-tp-md"><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
 
 
@@ -434,7 +436,7 @@
 
 		</details>
 	<details id="details-panel4" class="provisional wb-details-close">
-        <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail</summary>
+        <summary class="py-4"><span class="fas fa-envelope mrgn-rght-sm"></span>By mail</summary>
 			   <p class="mrgn-tp-md"><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
 
 		<!--<p><span class="far fa-clock"></span><strong> Processing time:</strong> Up to 3 months --> <!--For an immediate change, make your updates <a href="#details-panel1">online</a> or by <a href="#details-panel2">phone</a></p>-->	
