--- a/en/revenue-agency/services/e-services/cra-login-services/locked-account.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/locked-account.html
@@ -237,8 +237,8 @@
 		<nav id="wb-bc" property="breadcrumb"><h2 class="wb-inv">You are here:</h2><div class="container"><ol class="breadcrumb">
 <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
  <li><a href='https://www.canada.ca/en/revenue-agency.html'>Canada Revenue Agency</a></li>
-<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA accounts</a></li>
-			<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html'>Help with using your CRA accounts</a></li>
+<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA sign-in services</a></li>
+			<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html'>Help for CRA sign-in services</a></li>
 
 </ol></div></nav>
 
@@ -270,7 +270,7 @@
         <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement" class="container">
             
    <div class="mwstitle section">
-<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA account help</p>
+<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA sign-in services help</p>
 <h1 class="mrgn-tp-0" id="wb-cont">Locked account</h1>
 </div>
 	<!-- <p class="pull-left small"><strong>You may be looking for:</strong></p>
@@ -293,38 +293,45 @@
 
   </ul>
 	<h2 id="section1">Recover a locked account</h2>
-<p>Your account will become locked if you enter the wrong information too many times for any of the following:</p>
+<div id="ajax-account-locked"><p>Your account will become locked if you enter the wrong information too many times for any of the following:</p>
 	<ul>
     <li>CRA user ID or password</li>
 		<li>One-time passcode for multi-factor authentication (MFA)</li>
 		<li>Security questions</li>
 		<li>CRA security code</li>
+		<li>The document verification service</li>
 	</ul>
-  <p>If your account becomes locked, <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a> to have your account unlocked.</p>
+  <p>To have your account unlocked, <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html#assistance">contact us by phone</a>.</p></div>
 
 		<h2 id="section2">Avoid getting locked out</h2>
  <p>Use the following strategies to avoid getting locked out of your account.</p>
-  <h3>Create a strong CRA user ID and password</h3>
+				      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#ajax-create-strong-id"></section>
+
+ <!-- <h3>Create a strong CRA user ID and password</h3>
   <p>When you create your CRA user ID and password, we recommend that you:</p>
   <ul>
     <li>Make them easy for you to remember and hard for others to guess</li>
     <li>Avoid using personal information such as your name, social insurance number, mailing or email address</li>
     <li>Always use unique passwords rather than reusing the same password for different accounts or systems</li>
     <li>Keep this information secure and do not share it with anyone</li>
-  </ul>
+  </ul>-->
 	<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#section2">Manage your CRA user ID and password</a></p>
-  <h3>Enroll in multi-factor authentication (MFA) options</h3>
-	<p>We recommend that you enroll in more than one option, although only one option is required. Enrolling in multiple MFA options will help ensure that you can still access your account if you change your phone number, misplace your passcode grid, or delete the authenticator app.</p>
+				      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html#ajax-enroll-multiple-mfa"></section>
+
+ <!-- <h3>Enroll in multiple multi-factor authentication (MFA) options</h3>
+	<p>We recommend that you enroll in more than one option, although only one option is required. Enrolling in multiple MFA options will help ensure that you can still access your account if you change your phone number, misplace your passcode grid, or delete the authenticator app.</p>-->
 <p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html#section2">Update your multi-factor authentication (MFA) settings</a></p>
 	<h3>Choose memorable security questions</h3>
-  <p>You will be asked to choose 5 security questions that will be used to validate your identity in different situations, for example, when signing in, if you forget your CRA user ID, or if you sign in from a new device.</p>
-  <p>Your answers should be easy for you to remember but hard for others to guess. Answers that can change over time or questions that have more than one answer can be hard to remember.</p>
+	                             <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#ajax-security-questions"></section>
+	                             <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#ajax-security-answers"></section>
+
+<!--  <p>You will be asked to choose 5 security questions that will be used to validate your identity in different situations, for example, when signing in, if you forget your CRA user ID, or if you sign in from a new device.</p>
+  <p>Your answers should be easy for you to remember but hard for others to guess. Answers that can change over time or questions that have more than one answer can be hard to remember.</p>-->
   <p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html#section7">Choose your security questions</a></p>
 	<h3>CRA security code</h3>
   <p>Enter your security code carefully before it expires.</p>
 	<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/securitycode.html#section2">Learn more about the CRA security code</a></p>
 </div>
-
 
             <section class="pagedetails">
     <h2 class="wb-inv">Page details</h2>
